more scss refactoring

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,5 +1,5 @@
 // Input
-$input_backgroundColor: #adf1ff;
+$input_backgroundColor: #eeeeee;
 $input_borderColor: #80b6cf;
 $input_boxShadow: #7e9dac;
 
@@ -16,9 +16,9 @@ $buttonDelete_background: #f28260;
 $buttonDelete_backgroundHover: #ca6d51;
 $buttonDelete_shadow: #ff8864;
 
-$buttonSave_background: #f28260;
-$buttonSave_backgroundHover: #ca6d51;
-$buttonSave_shadow: #ff8864;
+$buttonSave_background: #7be9d6;
+$buttonSave_backgroundHover: #61b8a9;
+$buttonSave_shadow: #87ffeb;
 
 $navLink_background: #46606d;
 $navLink_backgroundHover: #66d2ff;
