--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -1,5 +1,5 @@
 @import "../../../styles.scss";
-@import "../../../assets/login.scss";
+@import "../../../assets/scss/login.scss";
 
 #top-text {
     text-align: center;
