--- a/src/assets/scss/content.scss
+++ b/src/assets/scss/content.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./popup.scss";
 
 label {
     line-height: 40px;
@@ -155,45 +156,4 @@ label {
     margin: 5px;
     height: 40px;
     width: calc(100% - 230px);
-}
-
-.overlay {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    transition: opacity 0.5s, visibility 0.5s;
-    visibility: hidden;
-    opacity: 0;
-    overflow: auto;
-}
-
-.overlay:target {
-    visibility: visible;
-    opacity: 1;
-}
-
-.popup {
-    margin: 5vh auto;
-    padding: 20px;
-    background: #fff;
-    border-radius: 5px;
-    min-width: 700px;
-    width: 50vw;
-    max-width: 1200px;
-    position: relative;
-}
-
-.popup h2 {
-    margin-top: 0;
-}
-
-#cancelButtonPOPUP {
-    margin: 0 auto 0 20px;
-}
-
-#saveButtonPOPUP {
-    margin: 0 20px 0 auto;
 }
