--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,17 +9,18 @@
         <a id="location-link" routerLink="/locations" routerLinkActive="active">Geschäftsstellen</a>
         <a id="persons-link" routerLink="/persons" routerLinkActive="active">Personen</a>
         <a id="logout-link" (click)="logout()">Abmelden</a>
-        <a id="options-link" href="#configuration">
-            <!-- <img src="../assets/svg/gear.svg" style="fill: green"> -->
+        <a id="options-link" [href]="currentURL + '#configuration'" *ngIf="!authService.asGuest">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" id="gear">
-                <path d="M24 13.616v-3.232c-1.651-.587-2.694-.752-3.219-2.019v-.001c-.527-1.271.1-2.134.847-3.707l-2.285-2.285c-1.561.742-2.433 1.375-3.707.847h-.001c-1.269-.526-1.435-1.576-2.019-3.219h-3.232c-.582 1.635-.749 2.692-2.019 3.219h-.001c-1.271.528-2.132-.098-3.707-.847l-2.285 2.285c.745 1.568 1.375 2.434.847 3.707-.527 1.271-1.584 1.438-3.219 2.02v3.232c1.632.58 2.692.749 3.219 2.019.53 1.282-.114 2.166-.847 3.707l2.285 2.286c1.562-.743 2.434-1.375 3.707-.847h.001c1.27.526 1.436 1.579 2.019 3.219h3.232c.582-1.636.75-2.69 2.027-3.222h.001c1.262-.524 2.12.101 3.698.851l2.285-2.286c-.744-1.563-1.375-2.433-.848-3.706.527-1.271 1.588-1.44 3.221-2.021zm-12 2.384c-2.209 0-4-1.791-4-4s1.791-4 4-4 4 1.791 4 4-1.791 4-4 4z" />
+                <path
+                    d="M24 13.616v-3.232c-1.651-.587-2.694-.752-3.219-2.019v-.001c-.527-1.271.1-2.134.847-3.707l-2.285-2.285c-1.561.742-2.433 1.375-3.707.847h-.001c-1.269-.526-1.435-1.576-2.019-3.219h-3.232c-.582 1.635-.749 2.692-2.019 3.219h-.001c-1.271.528-2.132-.098-3.707-.847l-2.285 2.285c.745 1.568 1.375 2.434.847 3.707-.527 1.271-1.584 1.438-3.219 2.02v3.232c1.632.58 2.692.749 3.219 2.019.53 1.282-.114 2.166-.847 3.707l2.285 2.286c1.562-.743 2.434-1.375 3.707-.847h.001c1.27.526 1.436 1.579 2.019 3.219h3.232c.582-1.636.75-2.69 2.027-3.222h.001c1.262-.524 2.12.101 3.698.851l2.285-2.286c-.744-1.563-1.375-2.433-.848-3.706.527-1.271 1.588-1.44 3.221-2.021zm-12 2.384c-2.209 0-4-1.791-4-4s1.791-4 4-4 4 1.791 4 4-1.791 4-4 4z" />
             </svg>
         </a>
     </div>
 
     <div class="navigationRight" *ngIf="!this.authService.loggedIn">
         <a id="login-link" routerLink="/login" routerLinkActive="active">Anmeldung</a>
-        <a id="createUser-link" routerLink="/createUser" routerLinkActive="active">Account erstellen</a>
+        <a id="createUser-link" routerLink="/createUser" routerLinkActive="active"
+            *ngIf="configService.config.enableAccountCreation">Account erstellen</a>
     </div>
 </div>
 
@@ -32,18 +33,30 @@
         <h2>Einstellungen</h2>
         <div class="contentBody">
             <div>
+                <input type="checkbox" id="guestLogin" [(ngModel)]="configService.config.enableGuestLogin">
                 <label for="guestLogin" class="bodyInputLabel">Gast Login erlauben</label>
-                <input type="checkbox" id="guestLogin">
             </div>
 
             <div>
+                <input type="checkbox" id="enableCreateAccount"
+                    [(ngModel)]="configService.config.enableAccountCreation">
                 <label for="enableCreateAccount" class="bodyInputLabel">Erlaube Erstellung neuer Accounts</label>
-                <input type="checkbox" id="enableCreateAccount">
+            </div>
+
+            <div>
+                <input type="checkbox" id="enableGuestDataManipulation"
+                    [(ngModel)]="configService.config.enableGuestDataManipulation">
+                <label for="enableGuestDataManipulation" class="bodyInputLabel">Erlaube Gästen die Manipulation von
+                    Daten</label>
             </div>
 
             <div class="bodyActions">
-                <a class="cancelButton button" id="cancelButtonPOPUP" href="/#">Abbrechen</a>
-                <a class="saveButton button" id="saveButtonPOPUP" href="/#">Speichern</a>
+                <a id="cancelButtonPOPUP" [href]="currentURL + '#'">
+                    <div class="cancelButton button">Abbrechen</div>
+                </a>
+                <a id="saveButtonPOPUP" [href]="currentURL + '#'" (click)="saveConfig()">
+                    <div class="saveButton button">Speichern</div>
+                </a>
             </div>
         </div>
     </div>
