--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -7,7 +7,7 @@
     <div class="flex-item"> <label for="passWord">Passwort</label> </div>
     <div class="flex-item"> <input type="password" id="passWord" [(ngModel)]="loginData.passWord"> </div>
 
-    <div class="flex-itemHalf actionButtons"> <button class="cancelButton" (click)="prepareLogin(true)">Gast
+    <div class="flex-itemHalf actionButtons"> <button class="cancelButton" (click)="prepareLogin(true)" *ngIf="!!configService.config.enableGuestLogin">Gast
             Anmeldung</button> </div>
     <div class="flex-itemHalf actionButtons"> <button class="saveButton" (click)="prepareLogin()">Anmelden</button>
     </div>
