--- a/src/assets/scss/login.scss
+++ b/src/assets/scss/login.scss
@@ -18,3 +18,9 @@
     margin-bottom: 10px;
     margin-top: 10px;
 }
+
+input[type="text"],
+input[type="password"] {
+    padding: 0;
+    text-align: center;
+}
