--- a/src/app/views/persons/persons.component.html
+++ b/src/app/views/persons/persons.component.html
@@ -3,7 +3,7 @@
         <input type="text" class="input filterInput" placeholder="Filter" [(ngModel)]="filterValue"
             (keyup)="prepareFilter($event)">
         <a class="createNewButton button" href="/persons#createNewPerson"
-            [class.disabledLink]="!!authService.asGuest && !configService.config.enableGuestDataManipulation">Neue
+            *ngIf="!authService.asGuest || !!authService.asGuest && !!configService.config.enableGuestDataManipulation">Neue
             Person</a>
     </div>
 
@@ -44,15 +44,15 @@
                             <div>
                                 <label [attr.for]="'company' + i" class="bodyInputLabel">Firma</label>
                                 <input type="text" [attr.id]="'company' + i" class="input" [(ngModel)]="person.Company"
-                                [disabled]="!!authService.asGuest && !configService.config.enableGuestDataManipulation">
+                                    [disabled]="!!authService.asGuest && !configService.config.enableGuestDataManipulation">
                             </div>
 
                             <div class="bodyActions">
                                 <button class="cancelButton" id="cancelButton" (click)="cancel(i)">Abbrechen</button>
-                                <button class="deleteButton" id="deleteButton"
-                                    (click)="deletePerson(person.ID)">Löschen</button>
-                                <button class="saveButton" id="saveButton"
-                                    (click)="updatePerson(person.ID)">Ändern</button>
+                                <button class="deleteButton" id="deleteButton" (click)="deletePerson(person.ID)"
+                                    *ngIf="!authService.asGuest || !!authService.asGuest && !!configService.config.enableGuestDataManipulation">Löschen</button>
+                                <button class="saveButton" id="saveButton" (click)="updatePerson(person.ID)"
+                                    *ngIf="!authService.asGuest || !!authService.asGuest && !!configService.config.enableGuestDataManipulation">Ändern</button>
                             </div>
                         </div>
                     </div>
@@ -63,7 +63,8 @@
 </div>
 
 
-<div [id]="(!!authService.asGuest && !configService.config.enableGuestDataManipulation) ? ('') : ('createNewPerson')" class="overlay">
+<div [id]="(!!authService.asGuest && !configService.config.enableGuestDataManipulation) ? ('') : ('createNewPerson')"
+    class="overlay">
     <div class="popup">
         <h2>Neue Person erstellen</h2>
         <div class="contentBody">
