--- a/src/app/views/persons/persons.component.html
+++ b/src/app/views/persons/persons.component.html
@@ -74,7 +74,7 @@
             </div>
 
             <div>
-                <label for="lastName" class="bodyInputLabel">Vorname</label>
+                <label for="lastName" class="bodyInputLabel">Nachnamen</label>
                 <input type="text" id="lastName" class="input" [(ngModel)]="newPerson.LastName">
             </div>
 
