--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
     <div class="navigationRight" *ngIf="this.authService.loggedIn">
         <a id="devices-link" routerLink="/devices" routerLinkActive="active">Geräte</a>
-        <a id="location-link" routerLink="/locations" routerLinkActive="active">Geschäftsstellen</a>
+        <a id="location-link" routerLink="/locations" routerLinkActive="active">Standorte</a>
         <a id="persons-link" routerLink="/persons" routerLinkActive="active">Personen</a>
         <a id="logout-link" (click)="logout()">Abmelden</a>
         <a id="options-link" [href]="currentURL + '#configuration'" *ngIf="!authService.asGuest">
